--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="layoutBg">#D3D3D3</color>
     <color name="buttonBg">#EDE8E8</color>
+    <color name="blue">#1E88E5</color>
+    <color name="green">#28BC2E</color>
 </resources>
